# ai-sdlc

./: .gitignore  ADMIN-ACCESS-CONTROL-HANDOFF.md  AGENT-MESH-DEPLOYED.md  ALL-SERVICES-COMPLETE.md  ARCHITECTURE.md  CATALYST-AWS-DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  COMPLETE-AGENT-INTELLIGENCE-SYSTEM.md  CONFIGURATION-COMPLETE.md  DASHBOARD-ADVANTAGES.md  DASHBOARD-COMPREHENSIVE-VIEW.md  DELTEK-CATALYST-BRANDING.md  DELTEK-CATALYST-IMPLEMENTATION-PLAN.md  DELTEK-OFFICIAL-BRANDING-COMPLETE.md  DEPLOYMENT-ACCESS-GUIDE.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-STATUS-20260203.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT-v2.5.0.md  Dockerfile  END-TO-END-TEST-RESULTS.md  ENTERPRISE-DEPLOYMENT.md  EXEC-AGENT-SKILL.md  FINAL-BRANDING-SUMMARY.md  FINAL-DELIVERY-SUMMARY.md  FINOPS-COMPLETE-SUMMARY.md  FINOPS-IMPLEMENTATION.md  FULLY-WORKING-MODE.md  GOVERNANCE-TEST-RESULTS.md  HANDOFF-PHASE-4-THEME-SYNC.md  IMPLEMENTATION-SUMMARY-THEME-SYNC.md  INTEGRATION-TEST-CHECKLIST.md  INTERACTIVE-CONTROL-CENTER.md  LOCAL-SETUP.md  MEMORY_SYSTEM_DELIVERY.md  MISSION-ACCOMPLISHED-INTERACTIVE-UI.md  MISSION-ACCOMPLISHED.md  PHASE-1-COMPLETE.md  (+51 more)
agents/: agent-mesh-integration.md  architect-jets.md  ask-tom-agent.md  atlas-agent.md  ba-agent.md  conductor.md  consultation-protocol.md  customer-agent-enhanced.md  customer-agent.md  end-to-end-software-builder.md  finops-agent.md  qa-agent-enhanced.md  qa-agent.md  security-agent.md  software-engineer-enhanced.md  software-engineer.md  tracker-agent.md  ux-agent.md
aisdlc/: cli.py
dashboard/: .dockerignore  CRASH-PREVENTION.md  DASHBOARD-AUTO-UPDATE.md  DOCKER-DEPLOYMENT.md  Dockerfile  FEATURE-PROJECT-DETAILS.md  FULL-PROJECT-VIEW-UPDATE.md  README.md  UPDATE-PROJECT-HIERARCHY.md  com.aisdlc.dashboard.plist  create-comprehensive-view.js  docker-compose.yml  docker-dashboard.sh  index.html  index.html.bak2  memory-api.js  phase5-dashboard.js  pm2-dashboard.sh  sdlc-control-center.jsx  server.js  start-dashboard.sh
demo/: index.html
docs/: AI-SDLC-Framework.md  (+18 more)
(+1303 files in other folders)
