[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aisdlc"
version = "3.0.0"
description = "Autonomous Agentic AI-SDLC — Self-learning, self-hosted, model-agnostic software development lifecycle platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "sdlc", "agents", "autonomous", "mcp", "llm"]

dependencies = [
    # LLM providers
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "litellm>=1.44.0",

    # Memory & vector store
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Orchestration & async
    "asyncio-mqtt>=0.16.0",
    "aiofiles>=23.2.0",
    "anyio>=4.4.0",

    # API server
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # MCP server
    "mcp>=1.0.0",

    # Tools & integrations
    "PyGithub>=2.3.0",
    "gitpython>=3.1.43",
    "docker>=7.1.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",

    # Data & storage
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "redis>=5.0.8",
    "aiosqlite>=0.20.0",

    # Utilities
    "rich>=13.7.1",
    "typer>=0.12.5",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.9",
    "watchfiles>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]
google = ["google-generativeai>=0.7.0"]
mistral = ["mistralai>=1.0.0"]

[project.scripts]
aisdlc = "aisdlc.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aisdlc*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
